# portfolio

./: Cargo.toml  index.html  index.js  index.js.map  package-lock.json  package.json  style.css  tsconfig.json  webpack.config.js
assets/: products.json
docs/: index.js  wasm.d.ts  wasm.js
src/: components.rs  lib.rs  pages.rs  router.rs
src/components/: footer.rs  menu.rs  menu_item.rs  project.rs  widget.rs
src/pages/: home.rs  notfound.rs  projects.rs
static/: index.html  package-lock.json  style.css.map  wasm_bg.wasm
styles/: index.scss
ts/: index.tsx
ts/atom/: footer.tsx  menuItem.tsx  project.tsx  widget.tsx
ts/molecule/: menu.tsx
ts/organism/: home.tsx  layout.tsx  projects.tsx
