[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-net = "0.2.6"
ron = "0.8.0"
serde = "1.0.160"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
yew = { version = "0.20.0", features = [ "csr" ] }
yew-router = "0.17.0"
